Dec 22, 2023    - **v4.0.10**
                Add new protocols:
                 * **3D Variability Analysis**: Protocol to compute the principle modes of variability with a dataset of aligned particles
                 * **3D Variability Display**: Protocol to create various versions of a 3D variability result that can be used for display
                 * **Blob Picker**: Automatically picks particles by searching for Gaussian signals.
                 * **Patch CTF Estimation**: Patch-based CTF estimation automatically estimates defocus variation for tilted, bent, deformed samples and is accurate for all particle sizes and types including flexible and membrane proteins.

Nov 17, 2023    - **v4.0.9**
                 Compatibility with cryoSPARC v4.4.0
                 Handling aborted protocols/jobs


June 24, 2023   - **v4.0.8**
                 Compatibility with cryoSPARC v4.3.1
                 Deprecated protocols removed: Legacy Refine, Legacy no uniform refine, Legacy naive local refine.
                 Symmetry moved to unit cell in refinements' output
                 Generation of star files using relion cancelled (not robust in all cases).

June 1, 2023   - **v4.0.7**
                 Fixed an error related with the shifts(shifts were not being calculated)
                 Checking the shifts in a test
                 Taking the rlnOriginXAngst, rlnOriginYAngst and rlnOriginZAngst
                   values from .star file generated by pyem library and using them to
                   calculate the particles shifts

May 26, 2023   - **v4.0.6**
                 Compatibility with cryoSPARC v4.2.1
                 Plugin operation in a cluster
                 Fixed an installation error

May 26, 2023   - **v4.0.5**
                 Plugin operation in a cluster
                 Fixed an installation error
March 16, 2023 -  **v4.0.4**
                 Compatibility with cryoSPARC v4.2.1

March 1, 2023 -  **v4.0.3**