@@ -75,6 +75,7 @@ V4_2_0 = 'V4.2.0'
 V4_2_1 = 'V4.2.1'
 V4_3_1 = 'V4.3.1'
 V4_4_0 = 'V4.4.0'
+V4_4_1 = 'V4.4.1'
 
 # Symmetry dict
 CS_SYM_NAME = dict()
