@@ -59,7 +59,7 @@ class ProtCryoSparcHomogeneousReconstruct(ProtCryosparcBase):
     _fscColumns = 6
     _protCompatibility = [V3_3_0, V3_3_1, V3_3_2, V4_0_0, V4_0_1, V4_0_2,
                           V4_0_3, V4_1_0, V4_1_1, V4_1_2, V4_2_0, V4_2_1,
-                          V4_3_1, V4_4_0]
+                          V4_3_1, V4_4_0, V4_4_1]
     ewsParamsName = []
 
     def _initialize(self):
@@ -355,10 +355,8 @@ class ProtCryoSparcHomogeneousReconstruct(ProtCryosparcBase):
         validateMsgs = cryosparcValidate()
         if not validateMsgs:
             csVersion = getCryosparcVersion()
-            if [version for version in self._protCompatibility
-                if parse_version(version) >= parse_version(csVersion)]:
-                validateMsgs = gpusValidate(self.getGpuList(),
-                                            checkSingleGPU=True)
+            if [version for version in self._protCompatibility if parse_version(version) <= parse_version(csVersion)]:
+                validateMsgs = gpusValidate(self.getGpuList(), checkSingleGPU=True)
                 if not validateMsgs:
                     particles = self._getInputParticles()
                     if not particles.hasCTF():
