@@ -60,7 +60,7 @@ class ProtCryoSparc3DHomogeneousRefine(ProtCryosparcBase):
     _className = "homo_refine_new"
     ewsParamsName = []
     _protCompatibility = [V3_3_1, V3_3_2, V4_0_0, V4_0_1, V4_0_2, V4_0_3, V4_1_0,
-                          V4_1_1, V4_1_2, V4_2_0, V4_2_1, V4_3_1, V4_4_0]
+                          V4_1_1, V4_1_2, V4_2_0, V4_2_1, V4_3_1, V4_4_0, V4_4_1]
 
     # --------------------------- DEFINE param functions ----------------------
     def _defineFileNames(self):
@@ -509,8 +509,7 @@ class ProtCryoSparc3DHomogeneousRefine(ProtCryosparcBase):
         validateMsgs = cryosparcValidate()
         if not validateMsgs:
             csVersion = getCryosparcVersion()
-            if [version for version in self._protCompatibility
-                if parse_version(version) >= parse_version(csVersion)]:
+            if [version for version in self._protCompatibility if parse_version(version) <= parse_version(csVersion)]:
                 validateMsgs = gpusValidate(self.getGpuList())
                 if not validateMsgs:
                     particles = self._getInputParticles()
