@@ -61,7 +61,7 @@ class ProtCryoSparcNew3DClassification(ProtCryosparcBase):
     _label = '3D Classification'
     _className = "class_3D"
     _protCompatibility = [V3_3_1, V3_3_2, V4_0_0, V4_0_1, V4_0_2, V4_0_3,
-                          V4_1_0, V4_1_1, V4_1_2, V4_2_0, V4_2_1, V4_3_1, V4_4_0]
+                          V4_1_0, V4_1_1, V4_1_2, V4_2_0, V4_2_1, V4_3_1, V4_4_0, V4_4_1]
 
     def _initialize(self):
         self._defineFileNames()
@@ -486,8 +486,7 @@ class ProtCryoSparcNew3DClassification(ProtCryosparcBase):
         validateMsgs = cryosparcValidate()
         if not validateMsgs:
             csVersion = getCryosparcVersion()
-            if [version for version in self._protCompatibility
-                if parse_version(version) >= parse_version(csVersion)]:
+            if [version for version in self._protCompatibility if parse_version(version) <= parse_version(csVersion)]:
                 validateMsgs = gpusValidate(self.getGpuList(),
                                             checkSingleGPU=True)
                 if not validateMsgs:
